--- a/3tierApp/web-tier/web-tier-1.yaml
+++ b/3tierApp/web-tier/web-tier-1.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   containers:
   - name: web-pod-1
-    image: savvythru/three-tier-proxy
+    image: fashaikh7/proxy
     env:
     - name: REDMINE_SVC
       value: app-svc-1
