--- a/3tierApp/app-tier/app-tier-1.yaml
+++ b/3tierApp/app-tier/app-tier-1.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   containers:
   - name: app-pod-1
-    image: savvythru/three-tier-frontend
+    image: fashaikh7/frontend
     env:
     - name: REDMINE_DB_MYSQL
       value: database-svc-1
